<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import
            type="com.hirin.story.utils.constant.type.PageEnum" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EDF2F9"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.auth.pages.welcome.WelcomeFragment">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/story"
            android:scaleType="fitStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_15sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/greenCardNewSemi"
                android:padding="@dimen/_5sdp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/igLanguage"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_30sdp"
                    tools:src="@drawable/ig_flag_indonesian" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tbLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:textSize="@dimen/_16ssp"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:text="@{@string/general_action_localize}"
                    tools:text="@string/general_action_localize"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tb_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/tb_body"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:alpha="0"
            android:textStyle="bold"
            android:layout_margin="@dimen/_10sdp"
            android:textSize="@dimen/_28sdp"
            android:text="@{@string/title_welcome_head}"
            tools:text="@string/title_welcome_head"
            android:fontFamily="@font/ubuntu_bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tb_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/btLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:alpha="0"
            android:layout_margin="@dimen/_10sdp"
            android:textSize="@dimen/_20sdp"
            android:text="@{@string/title_welcome_body}"
            tools:text="@string/title_welcome_body" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/btRegister"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:alpha="0"
            android:layout_margin="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            app:cornerRadius="@dimen/_10sdp"
            android:textAllCaps="false"
            android:text="@{@string/title_having_account}"
            tools:text="@string/title_having_account" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:alpha="0"
            android:layout_margin="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            app:cornerRadius="@dimen/_10sdp"
            android:textAllCaps="false"
            android:text="@{@string/title_register_is_free}"
            tools:text="@string/title_register_is_free" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>